--- a/css/main.css
+++ b/css/main.css
@@ -85,3 +85,134 @@ body {
   font-size: 1.125rem;
   font-family: "Outfit", sans-serif;
 }
+
+h1 {
+  color: white;
+  font-size: 1.375rem;
+  font-weight: 600;
+  line-height: 1.75rem;
+}
+
+p {
+  color: #8bacda;
+  font-size: 1.125rem;
+  font-weight: 300;
+  line-height: 1.625rem;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.nft-card {
+  background-color: #14253d;
+  border-radius: 15px;
+  padding: 1.5rem;
+  max-width: calc(17.375rem + 3rem);
+}
+@media (min-width: 375px) {
+  .nft-card {
+    max-width: calc(18.875rem + 3rem);
+  }
+}
+.nft-card .main-image {
+  position: relative;
+  margin-bottom: 1.5rem;
+}
+.nft-card .main-image img {
+  border-radius: 8px;
+  width: 17.375rem;
+  height: 17.375rem;
+}
+@media (min-width: 375px) {
+  .nft-card .main-image img {
+    width: 18.875rem;
+    height: 18.875rem;
+  }
+}
+.nft-card .main-image:hover .hover-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  background-image: url("../../images/icon-view.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: rgba(0, 255, 247, 0.5);
+  cursor: pointer;
+}
+.nft-card .title {
+  margin-bottom: 0.75rem;
+}
+.nft-card .title:hover {
+  cursor: pointer;
+  color: #00fff7;
+}
+.nft-card .price-n-time {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1rem 0;
+}
+.nft-card .price-n-time li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nft-card .price-n-time li img {
+  margin-right: 0.48125rem;
+}
+.nft-card .price-n-time li p {
+  font-size: 0.9375rem;
+  line-height: 1.1875rem;
+}
+@media (min-width: 375px) {
+  .nft-card .price-n-time li p {
+    font-size: 1rem;
+    line-height: 1.25rem;
+  }
+}
+.nft-card .price-n-time li:first-child p {
+  font-weight: 600;
+  color: #00fff7;
+}
+.nft-card .line {
+  height: 1px;
+  width: 100%;
+  background-color: #2f415b;
+  margin: 1rem 0;
+}
+.nft-card .author {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+.nft-card .author img {
+  width: 2.0625rem;
+  height: 2.0625rem;
+  margin-right: 1rem;
+}
+.nft-card .author p {
+  font-size: 0.9375rem;
+  line-height: 1.1875rem;
+  color: #8bacda;
+}
+.nft-card .author p span {
+  color: white;
+}
+.nft-card .author p span:hover {
+  cursor: pointer;
+  color: #00fff7;
+}
+@media (min-width: 375px) {
+  .nft-card .author p {
+    font-size: 1rem;
+    line-height: 1.25rem;
+  }
+}
