Bugfix: Github pages image path

--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -39,7 +39,7 @@
         height: 100%;
         border-radius: var.$border-radius-small;
 
-        background-image: url('../../images/icon-view.svg');
+        background-image: url('/images/icon-view.svg');
         background-repeat: no-repeat;
         background-position: center;
         background-color: var.$color-primary-cyan-50;
