--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -100,6 +100,9 @@
       width: var.$img-avatar-width;
       height: var.$img-avatar-width;
       margin-right: 1rem;
+
+      border: 1px solid #ffffff;
+      border-radius: 50%;
     }
 
     p {
