--- a/scss/base/_general.scss
+++ b/scss/base/_general.scss
@@ -1,22 +1,21 @@
-@use "../abstracts/variables" as var;
-@use "../abstracts/mixins" as mixin;
+@use '../abstracts/mixins' as mixin;
 
 body {
-  background-color: var.$color-neutral-dark-blue-300;
-  font-size: var.$fs-base;
-  font-family: var.$ff-primary;
+  background-color: var(--color-neutral-dark-blue-300);
+  font-size: var(--fs-base);
+  font-family: var(--ff-primary);
 }
 
 h1 {
-  color: var.$color-neutral-white;
+  color: var(--color-neutral-white);
   font-size: 1.375rem;
   font-weight: 600;
   line-height: 1.75rem;
 }
 
 p {
-  color: var.$color-primary-blue;
-  font-size: var.$fs-base;
+  color: var(--color-primary-blue);
+  font-size: var(--fs-base);
   font-weight: 300;
   line-height: 1.625rem;
 }
