--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -1,32 +1,23 @@
-@use '../abstracts/variables' as var;
 @use '../abstracts/mixins' as mixin;
 @use './reset';
 @use './font';
 @use './general';
+@use './root';
 
 .nft-card {
-  background-color: var.$color-neutral-dark-blue-200;
-  border-radius: var.$border-radius-big;
-  padding: var.$card-padding;
-  max-width: calc(#{var.$img-width} + #{var.$card-padding * 2});
-
-  @media (min-width: 375px) {
-    max-width: calc(#{var.$img-big-width} + #{var.$card-padding * 2});
-  }
+  background-color: var(--color-neutral-dark-blue-200);
+  border-radius: var(--border-radius-big);
+  padding: var(--card-padding);
+  max-width: calc(#{var(--img-width)} + #{var(--card-padding)} * 2);
 
   .main-image {
     position: relative;
     margin-bottom: 1.5rem;
 
     img {
-      border-radius: var.$border-radius-small;
-      width: var.$img-width;
-      height: var.$img-width;
-
-      @media (min-width: 375px) {
-        width: var.$img-big-width;
-        height: var.$img-big-width;
-      }
+      border-radius: var(--border-radius-small);
+      width: var(--img-width);
+      height: var(--img-width);
     }
 
     &:hover {
@@ -37,12 +28,12 @@
 
         width: 100%;
         height: 100%;
-        border-radius: var.$border-radius-small;
+        border-radius: var(--border-radius-small);
 
         background-image: url('../../images/icon-view.svg');
         background-repeat: no-repeat;
         background-position: center;
-        background-color: var.$color-primary-cyan-50;
+        background-color: var(--color-primary-cyan-50);
 
         cursor: pointer;
       }
@@ -54,7 +45,7 @@
 
     &:hover {
       cursor: pointer;
-      color: var.$color-primary-cyan;
+      color: var(--color-primary-cyan);
     }
   }
 
@@ -80,7 +71,7 @@
 
       &:first-child p {
         font-weight: 600;
-        color: var.$color-primary-cyan;
+        color: var(--color-primary-cyan);
       }
     }
   }
@@ -88,7 +79,7 @@
   .line {
     height: 1px;
     width: 100%;
-    background-color: var.$color-neutral-dark-blue-100;
+    background-color: var(--color-neutral-dark-blue-100);
     margin: 1rem 0;
   }
 
@@ -97,8 +88,8 @@
     margin-bottom: 0.5rem;
 
     img {
-      width: var.$img-avatar-width;
-      height: var.$img-avatar-width;
+      width: var(--img-avatar-width);
+      height: var(--img-avatar-width);
       margin-right: 1rem;
 
       border: 1px solid #ffffff;
@@ -108,14 +99,14 @@
     p {
       @include mixin.p-smaller;
 
-      color: var.$color-primary-blue;
+      color: var(--color-primary-blue);
 
       span {
-        color: var.$color-neutral-white;
+        color: var(--color-neutral-white);
 
         &:hover {
           cursor: pointer;
-          color: var.$color-primary-cyan;
+          color: var(--color-primary-cyan);
         }
       }
 
